# FSS

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  API_IMPLEMENTATION_ANALYSIS.md  API_IMPLEMENTATION_GUIDE.md  API_QUICK_REFERENCE.md  API_SPECIFICATIONS_DETAILED.md  FINAL_UPGRADE_3005.md  FSS_CPU_MONITOR.sh  FSS_RUN.sh  FSS_SETUP.sh  HANDOVER_CHAT.md  README.md  SENSORDRIVER_SOLUTION_REPORT.md  SHT31_INTEGRATION_COMPLETE.md  camera_test  capture_tool  fss_env_setup.sh  fss_folder_structure.txt  fss_profile.conf  read_sdd.py  setup.sh  startup_fss_system.sh  verify_dbus_fix.sh
bug_logs/: PHASE1_FRTAPP_BUG_LOG.md
db_daemon/: requirements.txt
db_daemon/src/: DbDaemonMain.py  DbDbusInterface.py  DiskFileManager.py  PosixShmReader.py  RecommendationEngine.py  SqliteManager.py  __init__.py  main.py
db_daemon/tests/: __init__.py  test_phase3_cleanup.py
dbus_config/: vn.edu.uit.FSS.conf  vn.edu.uit.FSS.conf.template
docs/: D-Bus_Contract_Matrix.md  FSS_ArchitectureDiagram_Q1.py  FSS_SoftwareDetailedDesign_v1.0.0.xlsx  FSS_SoftwareDetailedDesign_v1.1.0.txt  FSS_SoftwareDetailedDesign_v1.1.0.xlsx  FSS_SoftwareEngineering_v1.2.0.xlsx  FSS_UnitTestSpec_v0.2.0.xlsx  bug_sensor_crash_isolation.md
docs/tests/: FSS_Automated_System_Test_Plan.md
drivers/sensor/: README_PINOUT.md
electron_app/: config.json
electron_app/magicmirror/: .gitignore  package-lock.json  package.json
electron_app/py_bridge/: .ruff.toml  requirements.txt
frt_app/: CMakeLists.txt
frt_app/c_tflite_reader/: CMakeLists.txt
frt_app/c_tflite_reader/include/: TfliteReader.h
frt_app/c_tflite_reader/src/: TfliteReader.c  tflite_reader_test.c
frt_app/cpp_camera_core/: CMakeLists.txt
frt_app/cpp_camera_core/include/: CameraConfig.hpp  ShmWriter.hpp  UvcStillMagic.hpp  VideoCapture.hpp
frt_app/cpp_camera_core/src/: ShmWriter.cpp  VideoCapture.cpp  camera_test.cpp  main.cpp
frt_app/py_ai_core/: requirements.txt
frt_app/tests/: [FRT-MAIN]-test_comprehensive_frt.py  __init__.py  live_camera_pipeline.py  run_frt_full_test.sh  run_live_camera_test.sh  test_comprehensive_frt.py  test_model_benchmark.py  test_mog2_gridsearch.py  test_phase1.py  test_phase2.py  test_user_scenario_frtapp.py  user_scenario_pipeline.py
fss-test/: test-cases.sh  test-inference.py
fss-test/models/: model_int8.tflite
magicmirror/: package-lock.json
magicmirror/css/: main.css
recipe_extractor/: __init__.py  requirements.txt  rm_system_plan.txt
recipe_extractor/src/: recipe_extractor_main.py  recipe_extractor_service.py
recipe_extractor/tests/: TEST_PLAN.md  __init__.py  test_recipe_extractor_main.py  test_recipe_extractor_service.py
recommend_daemon/: requirements.txt
recommend_daemon/src/: DbusInterface.py  RecommendDbManager.py  RecommendEngine.py  __init__.py  main.py
recommend_daemon/systemd/: recommend_daemon.service
recommend_daemon/tests/: test_recommend_engine.py
recommend_system/: .gitkeep  FSS_NLP  FSS_NLP.ipynb  PHASE2_COMPLETION_SUMMARY.md  __init__.py  fss_ner_crf_optimized.joblib  requirements.txt  validate_phase2.py
recommend_system/models/: fss_ner_crf_optimized.joblib
recommend_system/src/: RecipeAnalyzerAPI.py  RecipeProcessor.py  __init__.py  dbus_service.py  main.py
recommend_system/tests/: NLPCoreAnalysisTest.py  __init__.py  mock_terminal_test.py  test_recipe_analyzer.py
scripts/: collect_debug_logs.sh
sensor_daemon/: CMakeLists.txt  SHT3X_INTEGRATION_SUMMARY.md  SHT3X_QUICK_REFERENCE.md
sensor_daemon/include/: DoorSensorDriver.hpp  GpioHandler.hpp  I2cHandler.hpp  InputProcessor.hpp  OutputProcessor.hpp  SdbusInterface.hpp  SensorDaemonMain.hpp  SensorDbusInterface.hpp  Sht3xDriver.hpp  SystemWatchdog.hpp  Vl53l0xDriver.hpp
sensor_daemon/src/: DoorSensorDriver.cpp  GpioHandler.cpp  I2cHandler.cpp  InputProcessor.cpp  OutputProcessor.cpp  SdbusInterface.cpp  SensorDaemonMain.cpp  SensorDbusInterface.cpp  Sht3xDriver.cpp  SystemWatchdog.cpp  Vl53l0xDriver.cpp  main.cpp  sht31_driver_interface.c
sensor_daemon/tests/: CMakeLists.txt  I2C_SOLUTION.md  README.md  TROUBLESHOOTING.md
sensor_daemon/tests/mc-38/: BUILD_SUMMARY.md  DoorSensorTest.cpp  DoorSensorTest.hpp  README.md  REINTEGRATION_SUMMARY.md  test_main.cpp  test_mc38_driver
sensor_daemon/tests/sht3x/: Sht3xNativeTest.cpp  Sht3xTest.cpp  Sht3xTest.hpp  test_main.cpp
sensor_daemon/tests/vl53l0x/: Vl53l0xTest.cpp  Vl53l0xTest.hpp  test_main.cpp
system_results/frt_session_20260606_152052/: frt_session_summary.txt  full_log.txt  inference_table.csv  inference_table.md  pipeline_report.json  scenario_report.json
system_results/frt_session_20260606_152347/: frt_session_summary.txt  full_log.txt  inference_table.csv  inference_table.md  pipeline_report.json  scenario_report.json
system_results/frt_session_20260606_153521/: inference_table.md  pipeline_report.json  user_notifications.txt
tests/: CMakeLists.txt  PHASE1_COMPLETION_SUMMARY.md  PHASE1_TEST_REPORT.md  __init__.py  run_phase1_tests.py
tests/integration/: __init__.py  test_extractor_dbd_integration.py  test_extractor_electron_integration.py  test_extractor_recommend_integration.py
tests/system_tests/: pytest.ini  test_01_health_check.py  test_02_inventory_pipeline.py  test_03_recommend_pipeline.py
tests/unit/db_daemon/: IMPLEMENTATION_SUMMARY.md  README_TESTS.md  __init__.py  conftest.py  test_db_dbus_interface.py  test_dbd_daemon_main.py  test_disk_file_manager.py  test_phase1_schema.py  test_posix_shm_reader.py  test_sqlite_manager.py
tests/unit/sensor_daemon/: CMakeLists.txt  README.md  test_door_sensor_driver.cpp  test_input_processor.cpp  test_output_processor.cpp  test_sensor_daemon_main.cpp  test_sensor_dbus_interface.cpp  test_sht3x_driver.cpp  test_system_watchdog.cpp  test_vl53l0x_driver.cpp
tools/: capture_image.py  fss_env_setup.sh  mock_ai_dbus.py  plot_resource_usage.sh  resource_trace.py  run_e2e_tests.sh  verify_dbus_config.sh  verify_dbus_fix.sh  verify_install.sh
tools/ui_mock_cli/: CMakeLists.txt  mock_cli.py  requirements.txt  run_mock.sh  test_emit.py  ui_mock_cli
tools/ui_mock_cli/src/: main.cpp
(+2707 files in other folders)
